[gd_scene load_steps=13 format=3 uid="uid://bcvlm28nt0iwi"]

[ext_resource type="Script" uid="uid://bg1h072hwja02" path="res://encounter/battle/battle.gd" id="1_mqutd"]
[ext_resource type="PackedScene" uid="uid://c2x5nb8xutljl" path="res://encounter/battle/battle_result.tscn" id="2_tiqy5"]
[ext_resource type="AudioStream" uid="uid://bnnanitrufm0f" path="res://assets/sounds/sword_drum_01.wav" id="3_426p7"]
[ext_resource type="FontFile" uid="uid://bw4edb43exu17" path="res://assets/fonts/PirataOne-Regular.ttf" id="3_qubjc"]
[ext_resource type="FontFile" uid="uid://nieaekycl7wi" path="res://assets/fonts/SignikaNegative-VariableFont_wght.ttf" id="4_4mnim"]
[ext_resource type="Texture2D" uid="uid://jadm4msu5o3p" path="res://grid/tile/assets/arrow.png" id="4_v5t24"]
[ext_resource type="LabelSettings" uid="uid://u6018fifyd8o" path="res://assets/label.tres" id="5_imjxj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qubjc"]
bg_color = Color(0, 0, 0, 0.541176)

[sub_resource type="LabelSettings" id="LabelSettings_imjxj"]
font = ExtResource("4_4mnim")
font_size = 24
font_color = Color(0.0156863, 0.768627, 0.85098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_426p7"]
bg_color = Color(0.0156863, 0.768627, 0.85098, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="LabelSettings" id="LabelSettings_6hnvb"]
font = ExtResource("3_qubjc")
font_size = 80
outline_size = 10
outline_color = Color(0.0156863, 0.768627, 0.85098, 1)
shadow_size = 10
shadow_color = Color(0.0156863, 0.768627, 0.85098, 1)
shadow_offset = Vector2(4, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mqutd"]
bg_color = Color(0, 0.219608, 0.25098, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Battle" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mqutd")
result_scene = ExtResource("2_tiqy5")
success_audio = ExtResource("3_426p7")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qubjc")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 64

[node name="Layout" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="MarginContainer/Layout"]
layout_mode = 2
text = "Attack Encounter"
label_settings = SubResource("LabelSettings_imjxj")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/Layout"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_426p7")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Layout/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Title" type="Label" parent="MarginContainer/Layout/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Battle!"
label_settings = SubResource("LabelSettings_6hnvb")
horizontal_alignment = 1

[node name="TrackContainer" type="MarginContainer" parent="MarginContainer/Layout"]
custom_minimum_size = Vector2(600, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Track" type="Panel" parent="MarginContainer/Layout/TrackContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mqutd")

[node name="ResultRoot" type="Control" parent="MarginContainer/Layout/TrackContainer/Track"]
unique_name_in_owner = true
z_index = 100
anchors_preset = 0
offset_left = 280.0
offset_top = 35.0
offset_right = 320.0
offset_bottom = 75.0

[node name="TargetContainer" type="MarginContainer" parent="MarginContainer/Layout/TrackContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 490

[node name="Attack" type="ColorRect" parent="MarginContainer/Layout/TrackContainer/TargetContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
size_flags_horizontal = 4
color = Color(0.0156863, 0.768627, 0.85098, 1)

[node name="InputContainer" type="Control" parent="MarginContainer/Layout/TrackContainer"]
layout_mode = 2

[node name="Input" type="ColorRect" parent="MarginContainer/Layout/TrackContainer/InputContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
offset_right = 1.0
offset_bottom = 80.0
size_flags_horizontal = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Layout/TrackContainer/InputContainer/Input"]
texture_filter = 4
layout_mode = 0
offset_left = -19.0
offset_top = 50.0
offset_right = 21.0
offset_bottom = 90.0
texture = ExtResource("4_v5t24")
expand_mode = 1

[node name="Stats" type="HBoxContainer" parent="MarginContainer/Layout"]
layout_mode = 2

[node name="AttackValue" type="Label" parent="MarginContainer/Layout/Stats"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Attack: 10"
label_settings = ExtResource("5_imjxj")

[node name="FatigueValue" type="Label" parent="MarginContainer/Layout/Stats"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Fatigue: 20"
label_settings = ExtResource("5_imjxj")
horizontal_alignment = 2
